--- a/frontend/src/pages/PaginaMatriculasGuarauna.css
+++ b/frontend/src/pages/PaginaMatriculasGuarauna.css
@@ -213,7 +213,7 @@
 
 .btn-acao.ver {
   background: #f0fdf4;
-  color: #22c55e;
+  color: #082c15;
 }
 
 .btn-acao.ver:hover {
